2001-02-17  Arseny Slobodjuck <ampy@crosswinds.net>
            Bruno Haible  <haible@clisp.cons.org>

        * lispbibl.d (SCREEN): Also define on WIN32_NATIVE.
        * stream.d [WIN32_NATIVE]: Implement window streams for SCREEN package.
          (console_handle, console_size, console_cursor_pos,
           console_needtoclose, screenattr, attr_table, attr): New variables.
          (InitConsole, DoneConsole, v_up, v_cb, v_cs, v_ce, v_cl, v_cd,
           v_scroll, v_al, v_dl, v_su, v_move, v_put, wr_ch_window,
           MAKE-WINDOW, close_window, WINDOW-*): New functions.

2001-02-08  Bruno Haible  <haible@clisp.cons.org>

        * cfgunix.lisp: Mark the file as being UTF-8 encoded, so it can be
          loaded and compiled in any locale.
        * cfgacorn.lisp: Likewise.
        * cfgamiga.lisp: Likewise.
        * cfgdos.lisp: Likewise.
        * cfgsunux.lisp: Likewise.
        * cfgwin32.lisp: Likewise.
        Reported by Ulrich Drepper <drepper@redhat.com>.

2001-02-07  Sam Steingold  <sds@gnu.org>

	* inspect.lisp: Fixed bug #130567: unbound slots.
	(*inspect-unbound-value*): new internal variable
	(inspect-cllib): bind it
	(inspect-backend): use it for unbound symbols and slots
	(get-insp): call `insp-check' only when `insp' is non-NIL

2001-02-06  Bruno Haible  <haible@clisp.cons.org>

	* lispbibl.d (ICONV_CONST) [!UNIX]: New macro.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

	* stream.d (iconv_init): Remove macro, not needed any more since
	  libiconv-1.5.
	(iconv): Define as macro, to cast second argument.
	(iconv_mblen, iconv_mbstowcs, iconv_wcslen, iconv_wcstombs,
	 iconv_range, ChannelStream_init): Don't call iconv_init.

2001-02-04  Sam Steingold  <sds@gnu.org>
	    Bruno Haible  <haible@clisp.cons.org>

	* pathname.d (whole_namestring): Don't set subr_self.
	(file_namestring): New function.
	(FILE-NAMESTRING): Simplification: Call file_namestring.
	(ENOUGH-NAMESTRING): Set subr_self before calling whole_namestring.